--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
       <ul id="playersList"></ul>
       <button onclick="startGame()">Comenzar Partida</button>
     </div>
+
+    <div id="gameInfo">
+      <h2 id="roleInfo"></h2>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
