--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div id="app">
+    <img src="spy.png" alt="Espía" style="width:120px; margin-top:20px;"/>
     <h1>SpyfallBros</h1>
     <input type="text" id="playerName" placeholder="Tu nombre"/>
     <div>
