--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div id="app">
-    <p id="welcome">perritos y fichines vault</p>
-    <img src="https://i.imgur.com/ohYQakX.png" alt="Espía" style="width:120px; margin-top:10px;"/>
+    <p id="welcome">Bienvenidos a Perritos y Fichines!</p>
+    <img src="https://i.imgur.com/M7U2S6y.png" alt="Espía" style="width:120px; margin-top:10px;"/>
     <h1>SpyfallBros</h1>
     <input type="text" id="playerName" placeholder="Tu nombre" />
     <div>
