--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="app">
     <p id="welcome">Bienvenidos a Perritos y Fichines!</p>
-    <img src="Juansito22.jpg" alt="Espía" style="width:325px; margin-top:10px;"/>
+    <img src="Juansito22.jpeg" alt="Espía" style="width:120px; margin-top:10px;"/>
     <h1>SpyfallBros</h1>
     <input type="text" id="playerName" placeholder="Tu nombre" />
     <div>
@@ -35,5 +35,6 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
   <script src="script.js"></script>
+  <script src="questions.js"></script>
 </body>
 </html>
