--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="app">
+  
+<div id="introScreen">
+  <img src="Dog2.jpeg" alt="Dog intro" id="dogImage">
+</div>
+
+<div id="app">
     <p id="welcome">Bienvenidos a Perritos y Fichines!</p>
-    <img src="Juansito22.jpg" alt="Espía" style="width:320px; margin-top:10px;"/>
+    <img src="Juansito22.jpeg" alt="Espía" style="width:120px; margin-top:10px;"/>
     <h1>SpyfallBros</h1>
     <input type="text" id="playerName" placeholder="Tu nombre" />
     <div>
