--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
 <div id="introScreen">
-  <img src="Dog2.jpg" alt="Dog intro" id="dogImage">
+  <img src="Dog2.png" alt="Dog intro" id="dogImage">
 </div>
 
 <div id="app">
