--- a/index.html
+++ b/index.html
@@ -8,14 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-<div id="introScreen">
-  <img src="Dog2.png" alt="Dog intro" id="dogImage">
-</div>
-
-<div id="app">
+  <div id="app">
     <p id="welcome">Bienvenidos a Perritos y Fichines!</p>
-    <img src="Juansito22.jpg" alt="Espía" style="width:320px; margin-top:10px;"/>
+    <img src="Juansito22.jpeg" alt="Espía" style="width:120px; margin-top:10px;"/>
     <h1>SpyfallBros</h1>
     <input type="text" id="playerName" placeholder="Tu nombre" />
     <div>
